# src/routes/user/user.route.js
@@ -5,5 +5,7 @@ const router = express.Router()
 
 // list all users
 router.get('/listAllUsers', AuthService.verifyToken, UserController.listAllUsers)
+// update password
+router.patch('/updatePassword', AuthService.verifyToken, UserController.updatePassword)
 
 module.exports = router
